--- a/wp-content/themes/tutannet/style.css
+++ b/wp-content/themes/tutannet/style.css
@@ -1270,20 +1270,6 @@ body.boxed-layout {
 		padding: 16px 0 0;
 	}
 
-	.header-ad {
-		float: right;
-	}
-
-	.header-ad .widget{
-		margin-bottom: 0;
-		padding-bottom: 0;
-	}
-
-	.logo-ad-wrapper {
-		padding: 12px 0 16px;
-		background: url("images/slight-border.jpg") repeat-x scroll left bottom ;
-	}
-
 	.site-title a{
 		font-family: 'Oswald', sans-serif;
 		font-size: 36px;
@@ -1313,16 +1299,23 @@ body.boxed-layout {
 /*--------------------------------------------------------------
 	NAV css 
 	--------------------------------------------------------------*/
+	#site-navigation {
+		text-align: center;
+	}
+	
 	#site-navigation ul {
 		list-style: none;
 		margin: 0;
 		padding: 0;
+		display: inline-block;
+		float: none;
+		text-align: center;
 	}
 
 	#site-navigation ul li {
-		float: left;
 		padding: 12px 18px;
 		position: relative;
+		text-align: center;
 	}
 
 	#site-navigation ul li a{
@@ -1576,307 +1569,18 @@ body.boxed-layout {
 		margin-bottom: 55px;
 	}
 	
-	.slider-wrapper .bx-wrapper {
-		position: relative;
+	#slider1_container {
+		position: relative; margin: 0 auto;
+		top: 0px; left: 0px; 
+		height: 300px; width: 100%;
+		overflow: hidden;
 	}
 	
-	.slider-wrapper .bx-wrapper .bx-controls-direction a.bx-prev, 
-	.slider-wrapper .bx-wrapper .bx-controls-direction a.bx-next {
-	  background: none repeat scroll 0 0;
-	  border: medium none;
-	  color: transparent;
-	  cursor: pointer;
-	  float: left;
-	  font: 0px/0 a;
-	  margin-left: 10px;
-	  margin-top: 0;
-	  opacity: 1;
-	  outline: medium none;
-	  position: relative;
-	  right: 0;
-	  text-indent: 0;
-	}
-	
-	.slider-wrapper .bx-wrapper .bx-controls-direction a.bx-next{
-		float: right;
-		margin-left: 0;
-		margin-right: 30px;
-	}
-	
-	.slider-wrapper .bx-prev:after{
-		position: absolute;
-		left: 0;
-		top: 0;
-		content: "\f053";
-		font-family:"FontAwesome";
-		color: #ffffff;
-		font-size: 30px;
-	}
-	
-	.slider-wrapper .bx-next:after{
-		position: absolute;
-		left: 0;
-		top: 0;
-		content: "\f054";
-		font-family:"FontAwesome";
-		color: #ffffff;
-		font-size: 30px;
-	}
-	
-	.slider-wrapper .bx-controls-direction {
-		position: absolute;
-		top: 50%;
-		margin-top: -20px;
-		width: 100%;
-		opacity: 0;
-		-webkit-transition: opacity 0.5s ease 0s;
-		-moz-transition: opacity 0.5s ease 0s;
-		-ms-transition: opacity 0.5s ease 0s;
-		transition: opacity 0.5s ease 0s;
-		height: 40px
-	}
-	
-	.slider-wrapper .bx-wrapper:hover .bx-controls-direction{
-		opacity: 1;
-	}
-	
-	.slider-wrapper .bx-pager-item{
-		display: inline-block;
-	}
-	
-	.slider-wrapper .bx-pager-item a {
-		background: none repeat scroll 0 0 #dc3522;
-		border-radius: 100%;
-		color: transparent;
-		display: inline-block;
-		font: 0px/0 a;
-		height: 12px;
-		margin-left: 5px;
-		width: 12px;
-		-webkit-transition: opacity 0.5s ease 0s;
-		-o-transition: opacity 0.5s ease 0s;
-		transition: opacity 0.5s ease 0s;
-		cursor: pointer;
-	}
-	
-	.slider-wrapper .bx-pager {
-		line-height: 10px;
-		text-align: center;
-	}
-	
-	.slider-wrapper .bx-pager-item a:hover,
-	.slider-wrapper .bx-pager-item a.active{
-		background: #808080;
-	}
-	
-	.big_slide {
-		float: left;
-		width: 100%;
-		position: relative;
-	}
-	
-	.big_slide:after,
-	.small_slide:after {
-		content: "";
-		height: 100%;
-		left: 0;
-		position: absolute;
-		top: 0;
-		width: 765px;
-	}
-	
-	.small_slide:after{
-		width: 100%;
-	}
-	
-	.big-cat-box {
-		background: none repeat scroll 0 0 #3d3d3d;
-		color: #ffffff;
-		padding:10px;
-		position: absolute;
-		right: 44px;
-		text-align: center;
-		top: 0;
-		width: 115px;
-		z-index: 99;
-	}
-	
-	.big-cat-box span {
-	  display: inline-block;
-	  font-family: "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
-	  margin-right: 6px;
-	  position: relative;
-	}
-	
-	.big-cat-box .cat-name {
-		font-size: 18px;
-		text-transform: uppercase;
-		margin-top: 0;
-	    width: 100%
-	}
-	
-	.big-cat-box .comment_count,
-	.big-cat-box .apmag-post-views{
-		font-size: 14px;
-		color: #e6e6e6;
-	}
-	
-	
-	.mag-slider-caption {
-		bottom: 0;
-		color: #ffffff;
-		left: 0;
-		position: absolute;
-		width: 92%;
-		z-index: 99;
-	}
-	
-	.big-cat-box i {
-	  margin-right: 0;
-	  text-align: center;
-	  width: 22px;
-	}
-	
-	.mag-slider-caption .slide-title {
-		color: #ffffff;
-		font-size: 24px;
-		font-weight: 400;
-		margin: 0 0 18px;
-		line-height: 25px;
-		font-family: "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
-		text-transform: uppercase;
-	}
-	
-	.slide-excerpt {
-		background: none repeat scroll 0 0 rgba(250, 53, 34, 0.5);
-		font-size: 18px;
-		line-height: 25px;
-		margin-bottom: 5px;
-		padding: 6px 10px;
-	}
-	
-	.slide-excerpt p{
-		margin-bottom: 0;
-	}
-	
-	.cnt-reading a {
-		color: #d9cb9e;
-		font-size: 14px;
-		position: relative;
-	}
-	
-	.cnt-reading a::after {
-		content: "\f061";
-		font-family: "FontAwesome";
-		font-size: 11px;
-		position: absolute;
-		right: -13px;
-		top: 3px;
-	}
-	
-	.small-slider-wrapper {
-		float: left;
-		width: 100%;
-	}
-	
-	.small_slide {
-		margin-bottom: 2px;
-		position: relative;
-	}
-	
-	.mag-slider-caption .slide-title {
-		background: none repeat scroll 0 0 rgba(250, 53, 34, 0.5);
-		color: #ffffff;
-		font-family: "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
-		font-size: 24px;
-		font-weight: 300;
-		line-height: 22px;
-		margin: 0 0 0;
-		padding: 8px 10px;
-		text-transform: uppercase;
-		float: left;
-	}
-	
-	.mag-small-slider-caption .slide-title {
-		background: none repeat scroll 0 0 rgba(250, 53, 34, 0.8);
-		font-size: 16px;
-		margin-bottom: 0;
-		padding: 8px 10px;
-		font-weight: 300;
-		float: left;
-	    color: #ffffff;
-	}
-	
-	.mag-small-slider-caption .home-posted{
-		background: none repeat scroll 0 0 rgba(250, 53, 34, 0.5);
-		margin-bottom: 5px;
-		padding: 2px 10px;
-	}
-	
-	.mag-small-slider-caption .slide-title a{
-		color: #ffffff;
-	}
-	
-	.mag-small-slider-caption .home-posted{
-		text-align: center;
-	}
-	
-	.mag-small-slider-caption .posted-on:before {
-	  	display: none;
-	}
-	
-	.mag-small-slider-caption .posted-on a {
-		color: #ffffff;
-		font-size: 12px;
-		font-style: normal;
-	}
-	
-	.mag-small-slider-caption .posted-on{
-		float: left;
-	}
-	
-	.mag-small-slider-caption .home-posted .comment_count,
-	.mag-small-slider-caption .home-posted .apmag-post-views{
-		font-size: 14px;
-		color: #e6e6e6;
-		position: relative;
-		float: left;
-		margin-left: 30px;
-	}
-	
-	
-	.mag-small-slider-caption .home-posted .apmag-post-views{
-		padding-left: 20px;
-	}
-	
-	.home-posted .posted-on i {
-		display: none;
-	}
-	
-	.mag-small-slider-caption .home-posted .comment_count i,
-	.mag-small-slider-caption .apmag-post-views i {
-		margin-right: 10px;
-	}
-	
-	.mag-small-slider-caption {
-		bottom: 0;
-		left:0;
-		position: absolute;
-		z-index: 99;
-		width: 89%;
-	}
-	
-	.small-slider-wrapper .cat-name {
-		background: none repeat scroll 0 0 #3d3d3d;
-		color: #ffffff;
-		font-size: 14px;
-		padding: 7px 10px;
-		position: absolute;
-		right: 0;
-		text-transform: uppercase;
-		top: 5px;
-		font-family: 'Oswald', sans-serif;
-		z-index: 99;
+	.slides {
+		cursor: move; position: relative; 
+		left: 0px; top: 0px; 
+		width: 100%; height: 300px; 
+		overflow: hidden;
 	}
 
 	#secondary .widget-title,
@@ -2014,6 +1718,10 @@ body.boxed-layout {
 /*--------------------------------------------------------------
 	first block css 
 	--------------------------------------------------------------*/
+	.first-block {
+		background-color: #E5E5E5;
+	}
+	
 	.first-block .leftposts-wrapper {
 		float: left;
 	}
