--- a/wp-content/themes/tutannet/style.css
+++ b/wp-content/themes/tutannet/style.css
@@ -714,154 +714,15 @@ Asides
 	display: none;
 }
 
+
 /*--------------------------------------------------------------
-Comments
+Functions
 --------------------------------------------------------------*/
 
-.comment-content a {
-	word-wrap: break-word;
-}
-
-#comments h2.comments-title {
-	color: #363636;
-	display: inline-block;
-	font-size: 20px;
-	font-style: italic;
-	font-weight: 300;
-	margin: 15px 0;
-}
-
-#comments h3 {
-	margin:0 0 20px;
-	color: #141414;
-	font-weight: 600;
-	display: inline-block;
-	line-height: 22px;
-	font-size: 18px;
-}
-
-#commentform label {
-	width: 120px;
-	display:block;
-}
-
-textarea#comment {
-	width: 100%;
-	height: 150px;
-}
-
-/*Comment Lists*/
-
-.comments-area ol {
-	margin: 0;
-	padding: 0;
-	list-style: none;
-}
-
-.comments-area ol.children {
-	margin: 0 0 0 15px;
-}
-
-.comment-list .comment-body {
-	padding: 15px;
-	margin-bottom: 20px;
-	background: #f1f1f1;
-}
-
-.comment-author img {
-	vertical-align: text-top;
-	margin-right: 15px;
-}
-
-.comment-author {
-	float: left;
-	margin-right: 10px;
-}
-
-.comment-author .fn {
-	display: block;
-	font-size: 14px;
-	font-style: normal;
-	font-weight: bold;
-	margin-top: 6px;
-	text-transform: capitalize;
-}
-
-.comment-author .fn .url {
-	color: #333;
-	padding: 0 0;
-}
-
-.comment-author .fn .url:hover {
-	background: #dc3522;
-	color: #FFF;
-}
-
-.comment-author .says {
+.is-disable {
 	display: none;
 }
 
-#cancel-comment-reply-link:before,
-#cancel-comment-reply-link{
-	color: #dc3522 !important;
-}
-
-.commentmetadata {
-	float: right;
-	font-weight: normal;
-	font-size: 12px;
-	font-style: italic;
-	font-weight: 300;
-}
-
-.commentmetadata a {
-	color: #666;
-}
-
-.commentmetadata .comment-edit-link {
-	color:#01AEFD;
-}
-
-.commentmetadata + .clear {
-	margin-bottom: 20px;
-}
-
-.reply .comment-reply-link {
-	background: none repeat scroll 0 0 #293037;
-	border-radius: 3px;
-	color: #FFFFFF;
-	font-size: 13px;
-	line-height: 1;
-	padding: 2px 10px;
-}
-
-#respond {
-	background: #f2f2f2;
-	padding: 20px;
-	margin-top: 20px;
-	color: #141414;
-}
-
-#commentform .form-submit {
-	margin-bottom: 0;
-}
-
-#cancel-comment-reply-link {
-	font-style: italic;
-	color: #FFF;
-}
-
-#cancel-comment-reply-link:before {
-	font-family: FontAwesome;
-	content: "\f057";
-	margin:0 5px 0 20px;
-	font-style: normal;
-	color: #FFF;
-}
-
-.logged-in-as a {
-	color: #DC3522;
-}
 
 /*--------------------------------------------------------------
 Infinite scroll
@@ -992,7 +853,6 @@ COMMON CSS
 
 body {
 	font-weight: 400;
-	/*overflow: hidden;*/
 	position: relative;
 	font-family: "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
 	line-height: 1.5;
@@ -1013,7 +873,7 @@ body.boxed-layout {
 }
 
 .tutannet-container {
-	width:100%;
+	width: 100%;
 	margin: 0 auto;
 }
 
@@ -1025,245 +885,54 @@ body.boxed-layout {
 	background: #F1F1F1;
 }
 
-
 /*--------------------------------------------------------------
-	Header css 
+	 Search css 
 	--------------------------------------------------------------*/
-
-/*--------------------------------------------------------------
-	Top Header css 
-	--------------------------------------------------------------*/
-
-	#masthead {
-		-moz-box-shadow: 0 0 15px #efefef;
-		box-shadow: 0 0 15px #efefef;
-		margin-bottom: 25px;
-	}
-
-	.home #masthead{
-		margin-bottom: 30px;
-	}
-
-	.site-branding {
-		float: left;
-		padding: 16px 0 0;
-	}
-
-	.site-title a{
-		font-family: 'Oswald', sans-serif;
-		font-size: 36px;
-		text-transform: uppercase;
-		font-weight: 400;
-	}
-
-	.site-title {
-		line-height: 36px;
-		margin-bottom: 0;
-	}
-
-	.site-description {
-		color: #818181;
-		font-size: 14px;
-		font-weight: 300;
-		line-height: 24px;
-		margin-bottom: 0;
-	}
-
-	.logo_with_text .sitelogo-wrap{
-		margin-bottom: 10px;
-	}
-
-
-
-/*--------------------------------------------------------------
-	NAV css 
-	--------------------------------------------------------------*/
-	#section-navigation {
-		text-align: center;
-		
-	}
 	
-	
-	#section-navigation ul {
-		list-style: none;
-		margin: 0;
-		padding: 0;
-		display: inline-block;
-		float: none;
+	search_block {
 		text-align: center;
 	}
-
-	#section-navigation ul li {
-		padding: 12px 18px;
+	
+	#searchform {
+		padding: 0 30%;
 		position: relative;
-		text-align: center;
+		padding-top: 10em;
 	}
 	
-	#section-navigation ul li::before {
-		border-right-style: solid;
-		border-right-width: 1px;
-		border-right-color: #f1f1f1;
-		height: 50%;
-		content: "";
-		position: absolute;
-		left: 100%;
-		top: 25%;
-	}
-	
-	#section-navigation ul li:last-child {
-		border: none;
-	}
-
-	#section-navigation ul li a {
-		position: relative;
-		letter-spacing: 1px;
-		text-decoration: none;
-	}
-		
-	#section-navigation ul li a b {
-		font: bold 14px Georgia, "Times New Roman", Times, serif;
-		color: #f1f1f1;
-		text-transform: uppercase;
-		padding-bottom: 10px;
-	}
-
-/*--------------------------------------------------------------
-	header search css 
-	--------------------------------------------------------------*/
-
-	.search-icon {
-		float: right;
-	}
-
-	.ak-search {
-		height: 100%;
-		left: 0;
-		position: fixed;
-		top: 0;
-		width: 100%;
-		opacity: 0;
-		visibility: hidden;
-		-webkit-transition: opacity 0.5s ease;
-		-moz-transition: opacity 0.5s ease;
-		-ms-transition: opacity 0.5s ease;
-		transition: opacity 0.5s ease;
-		z-index: 9999;
-	}
-
-	.overlay-search {
-		height: 100%;
-		left: 0;
-		position: absolute;
-		top: 0;
-		width: 100%;
-		opacity: 0;
-		visibility: hidden;
-		-webkit-transition: opacity 0.5s ease;
-		-moz-transition: opacity 0.5s ease;
-		-ms-transition: opacity 0.5s ease;
-		transition: opacity 0.5s ease;
-		z-index: 9999;
-	}
-
-	.ak-search.active{
-		visibility: visible;
-		opacity: 1;
-	}
-
-	.ak-search.active .overlay-search{
-		background: rgba(0,0,0,0.8);
-		opacity: 1;
-		visibility: visible;
-	}
-
-	.search-icon > i {
+	#searchform input {
+		height: 45px;
+		padding: 0px 10px;
+		padding-bottom: 3px;
 		font-size: 18px;
-		line-height: 48px;
-		cursor: pointer;
-		-webkit-transition: color 0.5s ease;
-		-moz-transition: color 0.5s ease;
-		-ms-transition: color 0.5s ease;
-		transition: color 0.5s ease;
+		background-color: rgba(0,0,0,0);
+		color: #000;
+		border: none;
+		border-bottom: 1px solid #000;
 	}
-
-	.search-icon > i:hover{
-		color: #dc3522;
+	
+	#search_button {
+	    position: absolute;
+	    top: 10em;
+	    right: 30%;
+	    padding: 10px;
+	    height: 37px;
+	    width: 37px;
+	    text-align: center;
+	    vertical-align: middle;
+	    display: inline-block;
+	    border-radius: 0;
+	    margin: 4px 4px;
 	}
-
-	.ak-search .search-form {
-		background: none repeat scroll 0 0 #E74C3C;
-		height: 148px;
-		left: 50%;
-		margin-left: -556px;
-		margin-top: -74px;
-		padding: 50px;
-		position: absolute;
-		top: 50%;
-		width: 1132px;
-		-webkit-transform: scale(0.3);
-		-ms-transform: scale(0.3);
-		-o-transform: scale(0.3);
-		transform: scale(0.3);
-		-webkit-transition: all 0.5s ease 0s;
-		-o-transition: all 0.5s ease 0s;
-		transition: all 0.5s ease 0s;
-		opacity: 0;
-		visibility: hidden;
-		z-index: 99999;
-	}
-
-	.ak-search.active .search-form{
-		-webkit-transform: scale(1);
-		-ms-transform: scale(1);
-		-o-transform: scale(1);
-		transform: scale(1);
-		opacity: 1;
-		visibility: visible;
-		-webkit-transition: all 0.5s ease 0s;
-		-o-transition: all 0.5s ease 0s;
-		transition: all 0.5s ease 0s;
-	}
-
-	.ak-search .search-form .search-field {
-		border: medium none;
-		float: left;
-		height: 48px;
-		padding: 0 20px;
-		width: 90%;
-		font-size: 30px;
-	}
-
-	.ak-search .search-form .search-submit {
-		background: none repeat scroll 0 0 #c0392b;
-		border: medium none;
-		font-size: 20px;
-		font-weight: 300;
-		height: 49px;
-		width: 10%;
-		-webkit-transition: background 0.5s ease;
-		-moz-transition: background 0.5s ease;
-		-ms-transition: background 0.5s ease;
-		transition: background 0.5s ease;
-		color: #ffffff;
-	}
-
-	.ak-search .search-form .search-submit:hover{
-		background: #a5281b;
-	}
-
-	.ak-search .close {
-		color: #ffffff;
-		cursor: pointer;
-		font-size: 80px;
-		line-height: 80px;
-		position: absolute;
-		right: 30px;
-		top: 0;
-		z-index: 99999;
-	}
+	
+	#search_button i {
+		font-size: 22px;
+		display: inline-block;
+		padding: 10px;
+	}	
+	
 
 /*--------------------------------------------------------------
-	Slider css 
+	Common css 
 	--------------------------------------------------------------*/
 
 	.row-eq-height {
@@ -1272,76 +941,21 @@ body.boxed-layout {
 	  display: -ms-flexbox;
 	  display: flex;
 	}
-	
-	.slider-wrapper {
-		margin-bottom: 55px;
-	}
-	
-	#slider1_container {
-		position: relative; margin: 0 auto;
-		top: 0px; left: 0px; 
-		height: 300px; width: 100%;
-		overflow: hidden;
-	}
-	
-	.slides {
-		cursor: move; position: relative; 
-		left: 0px; top: 0px; 
-		width: 100%; height: 300px; 
-		overflow: hidden;
-	}
-
-	#secondary .widget-title,
-	#secondary .sidebar-title,
-	#colophon .widget-title {
-		font: normal normal 24px Georgia, "Times New Roman", Times, serif;
-		line-height: 16px;
-		text-transform: uppercase;
-		color: #D2B55B;
-		letter-spacing: 2px;
-	}
-
-	.block-cat-name > span,
-	#secondary .widget-title > span,
-	#secondary .sidebar-title > span {
-		padding-right: 10px;
-	}
 
 	#primary {
 		float: left;
 		width: 100%;
 	}
-
-	#secondary-right-sidebar,
-	#secondary-left-sidebar {
-		float: right;
-		width: 27%;
-	}
-
-	#secondary-left-sidebar{
-		float: left;
-	}
-
-	.archive-left-sidebar #primary,
-	.single-post-left-sidebar #primary,
-	.page-left-sidebar #primary {
-		float: right;
-	}
-
-	.single-post-no-sidebar #primary,
-	.archive-no-sidebar #primary,
-	.page-no-sidebar #primary {
-		width: 100%;
-		float: none;
-	}
+	
+		
+/*--------------------------------------------------------------
+	Common Section css 
+	--------------------------------------------------------------*/	
 	
 	.tab-content {
 		padding: 4em 0;
 	}
 	
-/*--------------------------------------------------------------
-	common section css 
-	--------------------------------------------------------------*/	
 	
 	.block-cat-name {
 		font: normal normal 18px "Times New Roman", Times, serif;
