--- a/wp-content/themes/tutannet/inc/option-framework/css/tutannet-admin.css
+++ b/wp-content/themes/tutannet/inc/option-framework/css/tutannet-admin.css
@@ -23,7 +23,7 @@
 .audiourl-sec input[type="text"] {
   width: 690px;
 }
-.apmag-themeoption .option .controls a.wp-color-result{
+.tutannet-themeoption .option .controls a.wp-color-result{
     padding: 0 0 0 30px;
 }
 .iris-palette-container a{
