--- a/wp-content/themes/tutannet/tech/site-header/site-header.css
+++ b/wp-content/themes/tutannet/tech/site-header/site-header.css
@@ -18,257 +18,6 @@ Modules - reusable parts of our design
     box-shadow: none;
   }
 }
-@media only screen and (min-width: 1170px) {
-  #site-header {
-    -webkit-transition: background-color 0.3s;
-    -moz-transition: background-color 0.3s;
-    transition: background-color 0.3s;
-    /* Force Hardware Acceleration in WebKit */
-    -webkit-transform: translate3d(0, 0, 0);
-    -moz-transform: translate3d(0, 0, 0);
-    -ms-transform: translate3d(0, 0, 0);
-    -o-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-  }
-  #site-header.is-fixed {
-    /* when the user scrolls down, we hide the header right above the viewport */
-    position: fixed;
-    top: -80px;
-    background-color: rgba(2, 23, 37, 0.96);
-    -webkit-transition: -webkit-transform 0.3s;
-    -moz-transition: -moz-transform 0.3s;
-    transition: transform 0.3s;
-  }
-  #site-header.is-visible {
-    /* if the user changes the scrolling direction, we show the header */
-    -webkit-transform: translate3d(0, 100%, 0);
-    -moz-transform: translate3d(0, 100%, 0);
-    -ms-transform: translate3d(0, 100%, 0);
-    -o-transform: translate3d(0, 100%, 0);
-    transform: translate3d(0, 100%, 0);
-  }
-  #site-header.menu-is-open {
-    /* add a background color to the header when the navigation is open */
-    background-color: rgba(2, 23, 37, 0.96);
-  }
-}
-
-/*#site-primary-nav-trigger {
-  position: absolute;
-  right: 20%;
-  top: 0;
-  height: 100%;
-  width: 50px;
-  background-color: #03263d;
-}
-#site-primary-nav-trigger .cd-menu-text {
-  color: white;
-  text-transform: uppercase;
-  font-weight: 700;
-  /* hide the text on small devices *!/
-  display: none;
-}
-#site-primary-nav-trigger .cd-menu-icon {
-  /* this span is the central line of the menu icon *!/
-  display: inline-block;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  bottom: auto;
-  right: auto;
-  -webkit-transform: translateX(-50%) translateY(-50%);
-  -moz-transform: translateX(-50%) translateY(-50%);
-  -ms-transform: translateX(-50%) translateY(-50%);
-  -o-transform: translateX(-50%) translateY(-50%);
-  transform: translateX(-50%) translateY(-50%);
-  width: 18px;
-  height: 2px;
-  background-color: white;
-  -webkit-transition: background-color 0.3s;
-  -moz-transition: background-color 0.3s;
-  transition: background-color 0.3s;
-  /* these are the upper and lower lines in the menu icon *!/
-}
-#site-primary-nav-trigger .cd-menu-icon::before, #site-primary-nav-trigger .cd-menu-icon:after {
-  content: '';
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  background-color: white;
-  right: 0;
-  -webkit-transition: -webkit-transform .3s, top .3s, background-color 0s;
-  -moz-transition: -moz-transform .3s, top .3s, background-color 0s;
-  transition: transform .3s, top .3s, background-color 0s;
-}
-#site-primary-nav-trigger .cd-menu-icon::before {
-  top: -5px;
-}
-#site-primary-nav-trigger .cd-menu-icon::after {
-  top: 5px;
-}
-#site-primary-nav-trigger .cd-menu-icon.is-clicked {
-  background-color: rgba(255, 255, 255, 0);
-}
-#site-primary-nav-trigger .cd-menu-icon.is-clicked::before, #site-primary-nav-trigger .cd-menu-icon.is-clicked::after {
-  background-color: white;
-}
-#site-primary-nav-trigger .cd-menu-icon.is-clicked::before {
-  top: 0;
-  -webkit-transform: rotate(135deg);
-  -moz-transform: rotate(135deg);
-  -ms-transform: rotate(135deg);
-  -o-transform: rotate(135deg);
-  transform: rotate(135deg);
-}
-#site-primary-nav-trigger .cd-menu-icon.is-clicked::after {
-  top: 0;
-  -webkit-transform: rotate(225deg);
-  -moz-transform: rotate(225deg);
-  -ms-transform: rotate(225deg);
-  -o-transform: rotate(225deg);
-  transform: rotate(225deg);
-}
-@media only screen and (min-width: 768px) {
-  #site-primary-nav-trigger {
-    width: 100px;
-    padding-left: 1em;
-    background-color: transparent;
-    height: 30px;
-    line-height: 30px;
-    right: 2.2em;
-    top: 50%;
-    bottom: auto;
-    -webkit-transform: translateY(-50%);
-    -moz-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    -o-transform: translateY(-50%);
-    transform: translateY(-50%);
-  }
-  #site-primary-nav-trigger .cd-menu-text {
-    display: inline-block;
-  }
-  #site-primary-nav-trigger .cd-menu-icon {
-    left: auto;
-    right: 1em;
-    -webkit-transform: translateX(0) translateY(-50%);
-    -moz-transform: translateX(0) translateY(-50%);
-    -ms-transform: translateX(0) translateY(-50%);
-    -o-transform: translateX(0) translateY(-50%);
-    transform: translateX(0) translateY(-50%);
-  }
-}
-
-#site-primary-nav {
-  /* by default it's hidden - on top of the viewport *!/
-  position: fixed;
-  left: 0;
-  top: 0;
-  height: 100%;
-  width: 100%;
-  background: rgba(2, 23, 37, 0.96);
-  z-index: 2;
-  text-align: center;
-  padding: 50px 0;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  overflow: auto;
-  /* this fixes the buggy scrolling on webkit browsers - mobile devices only - when overflow property is applied *!/
-  -webkit-overflow-scrolling: touch;
-  -webkit-transform: translateY(-100%);
-  -moz-transform: translateY(-100%);
-  -ms-transform: translateY(-100%);
-  -o-transform: translateY(-100%);
-  transform: translateY(-100%);
-  -webkit-transition-property: -webkit-transform;
-  -moz-transition-property: -moz-transform;
-  transition-property: transform;
-  -webkit-transition-duration: 0.4s;
-  -moz-transition-duration: 0.4s;
-  transition-duration: 0.4s;
-}
-#site-primary-nav li {
-  font-size: 22px;
-  font-size: 1.375rem;
-  font-weight: 300;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  margin: .2em 0;
-  text-transform: capitalize;
-}
-#site-primary-nav a {
-  display: inline-block;
-  padding: .4em 1em;
-  border-radius: 0.25em;
-  -webkit-transition: background 0.2s;
-  -moz-transition: background 0.2s;
-  transition: background 0.2s;
-}
-.no-touch #site-primary-nav a:hover {
-  background-color: #e36767;
-}
-#site-primary-nav .cd-label {
-  color: #06446e;
-  text-transform: uppercase;
-  font-weight: 700;
-  font-size: 14px;
-  font-size: 0.875rem;
-  margin: 2.4em 0 .8em;
-}
-#site-primary-nav .cd-social {
-  display: inline-block;
-  margin: 0 .4em;
-}
-#site-primary-nav .cd-social a {
-  width: 44px;
-  height: 44px;
-  padding: 0;
-  background-image: url("../img/cd-socials.svg");
-  background-repeat: no-repeat;
-  /* image replacement *!/
-  overflow: hidden;
-  text-indent: 100%;
-  white-space: nowrap;
-}
-#site-primary-nav .cd-facebook a {
-  background-position: 0 0;
-}
-#site-primary-nav .cd-instagram a {
-  background-position: -44px 0;
-}
-#site-primary-nav .cd-dribbble a {
-  background-position: -88px 0;
-}
-#site-primary-nav .cd-twitter a {
-  background-position: -132px 0;
-}
-#site-primary-nav.is-visible {
-  -webkit-transform: translateY(0);
-  -moz-transform: translateY(0);
-  -ms-transform: translateY(0);
-  -o-transform: translateY(0);
-  transform: translateY(0);
-}
-@media only screen and (min-width: 768px) {
-  #site-primary-nav {
-    padding: 80px 0;
-  }
-}
-@media only screen and (min-width: 1170px) {
-  #site-primary-nav li {
-    font-size: 30px;
-    font-size: 1.875rem;
-  }
-  #site-primary-nav .cd-label {
-    font-size: 16px;
-    font-size: 1rem;
-  }
-}*/
-
-
-
-
 
 .cd-container {
   /* this class is used to give a max-width to the element it is applied to, and center it horizontally when it reaches that max-width */
@@ -416,6 +165,10 @@ Navigation
     width: auto;
     height: auto;
     background: none;
+  }
+  #site-intro-nav.is-hidden {
+  	display: none;
+  	position: fixed;
   }
   #site-intro-nav ul {
     position: static;
@@ -616,11 +369,15 @@ Secondary Fixed Navigation
   padding: 1.6em;
   color: #f0eee1;
 }
-#site-section-nav li:last-child a {
-  border-bottom: none;
-}
 #section-navigation {
 	text-align: center;
+}
+#section-navigation.is-visible {
+	opacity: 1;
+}
+#section-navigation.is-hidden {
+	opacity: 0;
+	display: none;
 }
 #section-navigation ul {
 	list-style: none;
@@ -645,7 +402,7 @@ Secondary Fixed Navigation
 	left: 100%;
 	top: 25%;
 }
-#section-navigation ul li:last-child {
+#section-navigation ul li:last-child::before {
 	border: none;
 }
 #section-navigation ul li a {
@@ -660,10 +417,12 @@ Secondary Fixed Navigation
 	padding-bottom: 10px;
 }
 .isDay {
-	background-color: white !important;
+	background-color: rgba(255, 255, 255, 0.96) !important;
+	color: rgb(3, 13, 24) !important;
 }
 .isNight {
-	background-color: black !important;
+	background-color: rgba(3, 13, 24, 0.96) !important;
+	color: rgb(250, 218, 94) !important;
 }
 @media only screen and (min-width: 1170px) {
   #site-section-nav {
@@ -878,6 +637,20 @@ Secondary Fixed Navigation
   }
 }
 
+#section-title {
+	color: rgb(250, 218, 94);
+	text-align: center;
+	font: normal bold 22px Georgia, "Times New Roman", Times, serif;
+	position: relative;
+	top: 50%;
+	transform: translateY(-50%);
+	text-transform: uppercase;
+	letter-spacing: 2px;
+}
+#section-title.is-hidden {
+	opacity: 0;
+	display: none;
+}
 /* -------------------------------- 
 
 Placeholder Sections
