--- a/wp-content/themes/tutannet/style.css
+++ b/wp-content/themes/tutannet/style.css
@@ -3,7 +3,7 @@ Theme Name: TuTanNet
 Theme URI: http://chuatutan.net
 Author: Vo Xuan Vinh
 Author URI: vxvpastime@gmail.com
-Version: 1.0 Nightly 20150804
+Version: 1.0 Nightly 20150805
 */
 
 /*--------------------------------------------------------------
@@ -843,28 +843,24 @@ body.boxed-layout {
 /*--------------------------------------------------------------
 	Login css 
 	--------------------------------------------------------------*/
-	#loginform {
+	#login_wrapper {
 		margin: auto;
 		position: absolute;
 		top: 0; left: 0; bottom: 0; right: 0;
 		background-color: #fff;
 		padding: 40px;
 		width: 400px;
-		height: 300px;
+		height: 410px;
+	}
+	
+	#loginform, #registerform, #lostpasswordform {
+		position: relative;
+		width: 100%;
+		height: 100%;
 	}
 	
 	.login_field {
 		margin-bottom: 5px;
-	}
-	
-	#login_wrap {
-		margin: auto;
-		position: absolute;
-		top: 0; left: 0; bottom: 0; right: 0;
-		background-color: #fff;
-		padding: 40px;
-		width: 400px;
-		height: 300px;
 	}
 	
 
