--- a/wp-content/themes/tutannet/style.css
+++ b/wp-content/themes/tutannet/style.css
@@ -3,7 +3,7 @@ Theme Name: TuTanNet
 Theme URI: http://chuatutan.net
 Author: Vo Xuan Vinh
 Author URI: vxvpastime@gmail.com
-Version: 1.0 Nightly 20150805
+Version: 1.0 Alpha 1 (20150805)
 */
 
 /*--------------------------------------------------------------
