--- a/wp-content/themes/tutannet/style.css
+++ b/wp-content/themes/tutannet/style.css
@@ -4,7 +4,7 @@ Theme URI: http://chuatutan.net
 Author: Vo Xuan Vinh
 Author URI: vxvpastime@gmail.com
 Version: 1.0.0-alpha.1
-Build: 1.0 Nightly 20150807
+Build: 1.0 Nightly 20150808
 GitHub Theme URI: https://github.com/vxvinh/tutannet
 GitHub Branch: master
 */
@@ -625,7 +625,7 @@ Functions
 --------------------------------------------------------------*/
 
 .is-disabled {
-	display: none;
+	display: none !important;
 }
 
 .disable-select {
@@ -634,6 +634,10 @@ Functions
   -ms-user-select: none;      
   user-select: none;
   cursor: default;
+}
+
+.is-blurred {
+  filter: blur(20px);
 }
 
 /*--------------------------------------------------------------
@@ -801,12 +805,13 @@ body.boxed-layout {
 	 Search css 
 	--------------------------------------------------------------*/
 	
-	#searchform, #searchtagcloudform {
+	#searchform {
 		position: relative;
-		padding-top: 10em;
+		padding-top: 5em;
 	}
 	
 	#searchtagcloudform {
+		position: relative;
 		padding-top: 0;
 		overflow: hidden;
 	}
@@ -879,42 +884,98 @@ body.boxed-layout {
 	
 	#search_tool {
 		text-align: center;
+		position: absolute;
+		bottom: 2%;
+		width: 100%
 	}
 	
 	#search_tool button {
 		border: none;
+		display: inline-block;
+		position: relative;
+		background-color: transparent;
+		color: #fff;
 	}
 	
-	#search_tool  button span {
+	#search_tool button:hover {
+		color: #fff;
+		background-color: transparent;
+	}
+	
+	#search_tool button span {
 		display: block;
-		font-size: 11px;
+		font-size: 14px;
 	}
 	
-	#search_tool  button span i {
-		font-size: 14px;
+	#search_tool button span i {
+		font-size: 17px;
+	}
+		
+	#search_tool button:active, #search_tool button.active {
+		background-color: transparent;
+		box-shadow: none;
+	}
+	
+	@media only screen and (min-width: 992px) {
+		#searchform {
+			position: relative;
+			padding-top: 10em;
+		}
+		#searchform	button {
+			background-color: #fff;
+			color: #000;
+		}
+		
+		#search_tool button {
+			border: none;
+			display: block;
+			background-color: #fff;
+			color: #000;
+		}
+		#search_tool button:hover {
+			color: #000;
+			background-color: #eee;
+		}
+		#search_tool button span {
+			display: block;
+			font-size: 11px;
+		}
+		#search_tool button span i {
+			font-size: 14px;
+		}
+		
 	}
 	
 	
 /*--------------------------------------------------------------
 	Login css 
-	--------------------------------------------------------------*/
+	--------------------------------------------------------------*/	
 	#login_wrapper {
-		padding-top: 5em;
+		padding-top: 0.7em;
 	}
 	
 	#login_wrapper h2 {
 		text-transform: capitalize;
-		font: 24px "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
+		font: 16px "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
 		text-align: center;
 		letter-spacing: 1px;
-		margin-bottom: 30px;
+		margin-bottom: 10px;
+		margin-top: 0;
+	}
+	
+	#login_wrapper button {
+		width: 100%;
+	}
+	
+	#login_wrapper .login_tool button {
+		width: auto;
 	}
 	
 	#loginform, #registerform, #lostpasswordform, #profileform {
 		position: relative;
-		background-color: #fff;
+		background-color: transparent;
 		height: 80%;
-		padding: 40px;
+		padding: 20px;
 		padding-top: 10px;
 	}
 	
@@ -924,20 +985,87 @@ body.boxed-layout {
 	
 	.login_tool {
 		text-align: center;
+		margin-top: 10px;
+		margin-bottom: 0;
 	}
 	
-	.login_tool button {
+	#login_wrapper .login_tool button {
 		border: none;
 		display: block;
+		background-color: transparent;
+		color: #fff;
 	}
 	
-	.login_tool button span {
+	#login_wrapper .login_tool button:hover {
+		color: #fff;
+		background-color: transparent;
+	}
+	
+	#login_wrapper .login_tool button:active, #login_wrapper .login_tool button.active {
+		background-color: transparent;
+		box-shadow: none;
+	}
+	
+	#login_wrapper .login_tool button span {
 		display: block;
-		font-size: 11px;
+		font-size: 14px;
 	}
 	
-	.login_tool button span i {
-		font-size: 14px;
+	#login_wrapper .login_tool button span i {
+		font-size: 17px;
+	}
+	
+	@media only screen and (min-width: 992px) {
+		#login_wrapper {
+			padding-top: 5em;
+		}
+		#login_wrapper h2 {
+			text-transform: capitalize;
+			font: 24px "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
+			text-align: center;
+			letter-spacing: 1px;
+			margin-bottom: 30px;
+			margin-top: 20px;
+		}
+		#loginform, #registerform, #lostpasswordform, #profileform {
+			position: relative;
+			background-color: #fff;
+			height: 80%;
+			padding: 10px 40px 40px 40px;
+		}
+		#login_wrapper button {
+			width: auto;
+		}
+		.login_tool {
+			text-align: center;
+			margin-top: 40px;
+			margin-bottom: 0;
+		}
+		#login_wrapper .login_tool button {
+			border: none;
+			display: block;
+			background-color: #fff;
+			color: #000;
+		}
+		#login_wrapper .login_tool button:hover {
+			color: #000;
+		}
+		#login_wrapper .login_tool button span {
+			display: block;
+			font-size: 11px;
+		}
+		#login_wrapper .login_tool button span i {
+			font-size: 14px;
+		}
+		.login_close {
+			position: absolute;
+			right: 3%;
+			top: 3%;
+			color: #ddd;
+		}
+		.login_close:hover {
+			color: #D7564C;
+		}
 	}
 	
 
